@@ -1,6 +1,6 @@
 Package: Matrix
 Version: 1.0-2
-Date: 2011-10-..
+Date: 2011-10-31
 Priority: recommended
 Title: Sparse and Dense Matrix Classes and Methods
 Author: Douglas Bates <bates@stat.wisc.edu> and Martin Maechler <maechler@stat.math.ethz.ch>
