@@ -1,3 +1,8 @@
+2011-10-30  Martin Maechler  <maechler@stat.math.ethz.ch>
+
+	* tests/other-pkgs.R: print more, don't run SparseM on Solaris for now.
+	* tests/Simple.R: encoding warning should not be promoted to error.
+
 2011-10-22  Martin Maechler  <maechler@stat.math.ethz.ch>
 
 	* R/rankMatrix.R (rankMatrix): 'method = "qrLINPACK"' now also
